--- a/word.html
+++ b/word.html
@@ -7,27 +7,29 @@
 <body>
 	<div>
 		<!-- 注意命令中的空格不能省略 -->
-		本地储存库的创建及提交
-		1.打开终端
-		2.输入:cd Desktop回车
-		3.新建文件:mkdir 文件名
-		4.打开文件:cd 文件名
-		5.初始化:git init
-		6.建立用户名:git config --global user.name "用户名"
-		7.建立邮箱名:git config --global user.email "邮箱名"
-		8.在初始化文件下建立文件:touch 文件名
-		9.添加:git add 文件名
-		10提交:git commit -m "你的注释"
+		本地储存库的创建及提交<br>
+		1.打开终端<br>
+		2.输入:cd Desktop回车<br>
+		3.新建文件:mkdir 文件名<br>
+		4.打开文件:cd 文件名<br>
+		5.初始化:git init<br>
+		6.建立用户名:git config --global user.name "用户名"<br>
+		7.建立邮箱名:git config --global user.email "邮箱名"<br>
+		8.在初始化文件下建立文件:touch 文件名<br>
+		9.添加:git add 文件名<br>
+		10提交:git commit -m "你的注释"<br>
 
 
-		当需要分支时
-		1.git branch 查看是否有分支
-		2.创建分支: git branch 分支名
-		3.选择分支：git checkout 分支名
-		4.在新的分支下创建、提交方法同上
+		当需要分支时<br>
+		1.git branch 查看是否有分支<br>
+		2.创建分支: git branch 分支名<br>
+		3.选择分支：git checkout 分支名<br>
+		4.在新的分支下创建、提交方法同上<br>
+		5.合并分支: git checkout master git merge 分支名
 
 		当与github连接时
 		
+
 
 
 	</div>
