--- a/word.html
+++ b/word.html
@@ -25,10 +25,11 @@
 		2.创建分支: git branch 分支名<br>
 		3.选择分支：git checkout 分支名<br>
 		4.在新的分支下创建、提交方法同上<br>
-		5.合并分支: git checkout master git merge 分支名
+		5.合并分支: git checkout master回车git merge 分支名 <br>
 
-		当与github连接时
 		
+
+
 
 
 
