--- a/word.html
+++ b/word.html
@@ -5,14 +5,17 @@
 	<title>Document</title>
 	<style>
 		div{
-			text-align: center;
+			width: 600px;
+			margin: 0 auto;
+			line-height: 30px;
+			font-weight: bolder;
 		}
 
 	</style>
 </head>
 <body>
 	<div>
-		<!-- 注意命令中的空格不能省略 -->
+		!!!注意命令中的空格不能省略
 		本地储存库的创建及提交<br>
 		1.打开终端<br>
 		2.输入:cd Desktop回车<br>
